MB-19889: Test BackfillManager::scanBuffer limit on readyQ for Producer

The Stream::readyQ is std::queue. So, there is no built-in limit on the
size.
In the case of a backfill, an indirect limit is enforced by the
BackfillManager::scanBuffer constraints.
I add some tests to check that those constraints are correclty applied.

Change-Id: Iaab5bd7045a492890353979aaef58e31bd45e554
Reviewed-on: http://review.couchbase.org/95921
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>